--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,37 +2,39 @@ body {
     margin:0;
     font-size: 20pt;
     font-family: 'Ubuntu', sans-serif;
-
 }
-
 #header {
     position: absolute;
-    background-image:linear-gradient(black, rgba(0, 0, 0, 0.904));
+    background-image:linear-gradient(black, rgba(0, 0, 0, 0.8));
     width:100%;
-    height:70px;
+    height:100px;
     display: flex;
     justify-content: space-between;
-    box-shadow: 0px 20px 20px 5px rgba(0, 0, 0, 0.904);
+    box-shadow: 0px 20px 20px 5px rgba(0, 0, 0, 0.8);
+    padding: 0;
+    
     #navbar {
         list-style-type: none;
-        margin: auto 0;
-        color:rgb(235, 235, 235);
+        color:rgb(216, 216, 216);  
         display: flex;
         width:90%;
         flex-direction: row;
         justify-content: space-evenly;
-        padding: 0 5% ;
+        padding: 0;
         font-size: 0.7em;
-        #small-triangle {
-            width:0;
-            height:0;
-            border-left-width: 10px;
-            border-top-width: 7px;
-            border-bottom-width: 7px;
-            border-style: solid;
-            border-color: transparent transparent transparent white;
-            margin:auto 0;  
-        }   
+        li {
+            margin: auto 0; 
+            cursor: pointer;
+            .fa-tv {
+                font-size: 2em;
+            }
+        }
+        #category-toggle {
+            font-size: 1.3em;
+            i {    
+                border:0;
+            }
+        }
         .category {
             opacity: 0;
             transition:all 0.7s;
@@ -41,37 +43,54 @@ body {
         }
         .category:hover{
             border-bottom:1px solid white;
-            text-shadow: 0 0 5px rgba(255, 255, 255, 0.747);
         }
     }
+    div {
+        position: fixed;
+        right:5%; top:3%;
+        background-color: rgba(255, 255, 255, 1);
+        border-radius: 50%;
+        width:70px;
+        height: 70px;
+        text-align: center;
+        box-shadow: 0 0 20px 3px black;
+        cursor: pointer;
+        .fa-shopping-basket {
+            color:rgba(111, 11, 11, 1);
+            font-size: 1.7em; 
+            line-height: 70px; 
+        }
+    }
+    
 } 
 #main-poster-container {
     width:100%;
-    height: 500px;
-    overflow: hidden;  
+    height: 600px; 
+    overflow: hidden;
     #main-poster {
         width:100%;
-        object-fit: cover;
     }    
     span {
         position: absolute;
-        font-size: 2em;
-        color: white;
-        top:250px;
+        font-size: 2.5em;
+        color: rgb(255, 255, 255);
+        top:300px;
         left:50%;
         transform: translate(-50%, -50%);
         text-shadow: 0 0 5px black;
-        background-color:rgba(0, 0, 0, 0.9);
+        background-color:rgba(111, 11, 11, 0.8);
         padding:20px;
+        
     }
 }    
 
 #category-container {
     padding-top:50px;
-    background-image: linear-gradient(black, rgb(46, 46, 46));
+    background-image: linear-gradient(rgb(24, 24, 24), rgb(46, 46, 46));
     display: flex;
     justify-content: space-evenly;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
+    
     div {
         width:30%;
         height: 200px;
