--- a/grupparbete-master/scss/_headerimg.scss
+++ b/grupparbete-master/scss/_headerimg.scss
@@ -1,9 +1,11 @@
 #main-poster-container {
     width:100%;
-    height: 600px; 
     overflow: hidden;
+    height: 700px;
     #main-poster {
         width:100%;
+        
+        display: block;
     }   
     h1 {
         position: absolute;
@@ -16,12 +18,13 @@
         position: absolute;
         font-size: 2.5em;
         color: rgb(255, 255, 255);
-        top:300px;
+        top:350px;
         left:50%;
         transform: translate(-50%, -50%);
-        text-shadow: 0 0 5px black;
-        background-color:rgba(111, 11, 11, 0.8);
-        padding:20px;
+   
+        background-color:rgba(111, 11, 11, 1);
+        padding: 20px 50px;
+        border-radius: 5px;
         
     }
 }    
