--- a/grupparbete-master/scss/main.scss
+++ b/grupparbete-master/scss/main.scss
@@ -14,6 +14,7 @@ body {
     justify-content: space-evenly;
     flex-wrap: wrap; 
     
+       
     div {
         width:30%;
         height: 200px;
@@ -24,36 +25,41 @@ body {
         color:white;
         margin:10px 0;
         border-radius: 5px;
-        span {
-            position: absolute;
-            transform: translate(-50%,0);
-            z-index: 1;
-            line-height: 200px;
-            font-size: 1.5em;
-            text-shadow: 0px 0px 5px black;
-            cursor: pointer;
+        a { 
+            text-decoration: none;
+            color:white;
+            span {
+                position: absolute;
+                transform: translate(-50%,0);
+                z-index: 1;
+                line-height: 200px;
+                font-size: 1.5em;
+                text-shadow: 0px 0px 5px black;
+                cursor: pointer;
             
-        }
-        img {  
-            position: relative;
-            transform: translate(-50%,-50%) scale(1);
-            top:50%; 
-            left:50%;
-            width:100%;
-            height:200px;
-            display: block;
-            object-fit: cover;
-            opacity: 0.75;
-        }
-        span:hover + img {
-            cursor: pointer;
-            transform:translate(-50%,-50%) scale(1.2);
-            filter: blur(7px); 
-        }
-        img:hover {
-            cursor: pointer;
-            transform:translate(-50%,-50%) scale(1.2);
-            filter: blur(7px);
+            }
+            img {  
+                position: relative;
+                transform: translate(-50%,0) scale(1);
+ 
+                left:50%;
+                width:100%;
+                height:200px;
+                display: block;
+                object-fit: cover;
+                opacity: 0.75;
+                transition: all 0.5s;
+            }
+            span:hover + img {
+                cursor: pointer;
+                transform:translate(-50%,0) scale(1.2);
+                filter: blur(7px); 
+            }
+            img:hover {
+                cursor: pointer;
+                transform:translate(-50%,0) scale(1.2);
+                filter: blur(7px);
+            }
         }
     }
 }
